--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ data/dev_audio.zip
 data/motions/*
 features.tar.gz
 data/features.tar.gz
+scripts/training/block_placement_ddc2/*.pth
+scripts/training/block_selection_new2/*.pth
