--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ features.tar.gz
 data/features.tar.gz
 scripts/training/block_placement_ddc2/*.pth
 scripts/training/block_selection_new2/*.pth
+scripts/training/experiment_name/*
+scripts/training/aistpp1/*
