--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ scripts/training/block_placement_ddc2/*.pth
 scripts/training/block_selection_new2/*.pth
 scripts/training/experiment_name/*
 scripts/training/aistpp1/*
+scripts/training/aistpp_short/*
