--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ data/features_sample/*
 **/*.pyc
 scripts/training/aistpp_212/*
 scripts/training/aistpp_212_mfcc/*
+scripts/training/aistpp_norm_backup/*
+scripts/training/aistpp_norm/*
+*.npy
