--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ data/scaled_features.tar.gz
 data/motion_features.tar.gz
 test_data/*
 scripts/training/aistpp_fixed/*
+scripts/training/aistpp_fixed2/*
