--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ test_data/*
 scripts/training/aistpp_fixed/*
 scripts/training/aistpp_fixed2/*
 scripts/training/aistpp_fixed3/*
+scripts/training/aistpp_aaa/*
+scripts/training/aistpp_aaa2/*
+scripts/training/aistpp_aaa3/*
+scripts/training/aistpp_fixed4/*
+
