--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,4 @@ scripts/training/aistpp_aaa/*
 scripts/training/aistpp_aaa2/*
 scripts/training/aistpp_aaa3/*
 scripts/training/aistpp_fixed4/*
-
+scripts/training/aistpp_blpe/*
