--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ scripts/training/aistpp_aaa2/*
 scripts/training/aistpp_aaa3/*
 scripts/training/aistpp_fixed4/*
 scripts/training/aistpp_blpe/*
+scripts/training/aistpp_blpe2/*
