new full attention

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ scripts/training/aistpp_aaa3/*
 scripts/training/aistpp_fixed4/*
 scripts/training/aistpp_blpe/*
 scripts/training/aistpp_blpe2/*
+scripts/training/aistpp_simp/*
