fixed pos emb not being learnable

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ scripts/training/aistpp_fixed4/*
 scripts/training/aistpp_blpe/*
 scripts/training/aistpp_blpe2/*
 scripts/training/aistpp_simp/*
+scripts/training/aistpp_simp2/*
